fix: button visibility

--- a/components/Button/Button.module.css
+++ b/components/Button/Button.module.css
@@ -15,10 +15,6 @@
 }
 
 @media (prefers-color-scheme: dark) {
-  .button {
-    color: var(--gray-2);
-  }
-
   .button:disabled {
     background-color: var(--gray-7);
   }
